--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">BoxDrops</string>
     <string name="str_add_drop">Add a Drop</string>
+    <string name="hint_et_drop">What is it?</string>
+    <string name="add_it">Add it</string>
+    <string name="notif_title">Achievement</string>
+    <string name="notif_message">You are nearing your goal</string>
+    <string name="notif_long_message">Congratulations, you are on the verge of accomplishing your goal.</string>
 </resources>
